[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://pngs/49465361-1a53ec80-f806-11e8-9dd3-ae09aed0de3f.png" type="Texture" id=3]
[ext_resource path="res://scenes/ScreenShake.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/dash.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/dashattack.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0624

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36, 36 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 36, 36 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 16
collision_mask = 13
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 4 )]

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
texture_scale = 3.0
color = Color( 0.223529, 0.223529, 0.223529, 1 )
shadow_enabled = true

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 2 )

[node name="dash" parent="." instance=ExtResource( 5 )]

[node name="dashattack" type="KinematicBody2D" parent="." groups=["bullet"]]
collision_layer = 32
collision_mask = 0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dashattack"]
shape = SubResource( 3 )
disabled = true

[node name="ScreenShake" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenShake"]
shape = SubResource( 4 )
disabled = true

[connection signal="shake" from="." to="Camera2D/ScreenShake" method="start" binds= [ 0.4, 20.0, 15.0, 1.0 ]]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="dashdone" from="dash" to="." method="_on_dash_dashdone"]
[connection signal="body_entered" from="ScreenShake" to="." method="_on_ScreenShake_body_entered"]
